# ee451_huffman

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
make/run/: output
src/: CMakeLists.txt  conf.h  main.c  main.cpp  main.h  util.h
src/fileio/: fileio.c  fileio.h
src/hashmap/: hashmap.c
src/huffbuild/: huffbuild.h
src/parallel/: decode.c  decode.h  encode.c  encode.h  parallel.c  parallel.h
src/serial/: CMakeLists.txt  serial.cpp  serial.h
test/: CMakeLists.txt
test/src/: serial_tests.cpp
