cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(HUFFMAN_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(HUFFMAN_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(HUFFMAN_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(SERIAL_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/serial)

include_directories(${HUFFMAN_INSTALL_INCLUDE_DIR})
include_directories(${SERIAL_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)


