cmake_minimum_required(VERSION 2.8)

find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})


SET(PROJECT_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(PROJECT_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(PROJECT_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

include_directories(${PROJECT_INSTALL_INCLUDE_DIR})

add_subdirectory(src)